Обновлен класс AccountStateMonitor: изменен интервал сбора данных о состоянии аккаунта с 60s на 15s. Добавлена проверка на пустые списки ордеров и позиций перед их сохранением. Обновлен класс TradeEventManager: изменен уровень логирования с INFO на DEBUG для обработки торговых событий и добавлены методы для проверки наличия открытых ордеров. Обновлен файл конфигурации: изменено расстояние отмены ордера по умолчанию с 1% на 0.3%.